Add prototype of a redeploy plugin